fix footer alignment

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -241,7 +241,7 @@ footer#main {
   margin: 0;
   p { margin: 0.5em 0; }
   width: 600px;
-  margin-left: 3em;
+  margin-left: 43px;
   margin-top: 2em;
   margin-bottom: 2em;
   border-top: 1px solid #ccc;
